Ditt nav kontor (#77)
* Legg til typer og basic komponent

* Implementer ditt-nav-kontor

* Fjern index.css fra git

* Flytt enhetKontaktInformasjon

* Implementer null-sjekker

* Poststed uppercase

--- a/src/index.less
+++ b/src/index.less
@@ -18,6 +18,7 @@
 @import "pages/forside/sections/3-header/Header.less";
 @import "pages/forside/sections/4-personinfo/adresser/Adresser.less";
 @import "pages/forside/sections/4-personinfo/personalia/Personalia.less";
+@import "pages/forside/sections/4-personinfo/ditt-nav-kontor/DittNavKontor.less";
 @import "pages/forside/sections/5-arbeidsforhold/Arbeidsforhold.less";
 @import "pages/forside/sections/6-eksterne/EksterneLenker.less";
 @import "pages/forside/sections/7-informasjon/MerInformasjon.less";
@@ -26,6 +27,7 @@
 
 @import "./components/box/Box.less";
 @import "./components/linkbox/LinkBox.less";
+@import "./components/apningstid/Apningstid.less";
 @import "./components/icon/Icon.less";
 @import "./components/melding/Melding.less";
 @import "./components/kilde/Kilde.less";
