Fiks for mobil og desktop

--- a/src/components/box/Box.less
+++ b/src/components/box/Box.less
@@ -8,7 +8,9 @@
   }
 
   &__container {
-    padding: 0 3rem 1rem 3rem;
+    @media @desktop {
+      padding: 0 3rem 1rem 3rem;
+    }
   }
 
   &__title-container {
