--- a/src/components/kilde/Kilde.less
+++ b/src/components/kilde/Kilde.less
@@ -15,7 +15,9 @@
     }
   }
   &__lenke {
-    display: flex;
-    justify-content: flex-end;
+    @media @desktop {
+      display: flex;
+      justify-content: flex-end;
+    }
   }
 }
