--- a/src/components/linkbox/LinkBox.less
+++ b/src/components/linkbox/LinkBox.less
@@ -5,7 +5,15 @@
 .linkbox {
   &__rad {
     display: flex;
-    display: flex-end;
+    padding: 1rem 0;
+    border-top: 1px solid #979797;
+    align-items: center;
+    text-decoration: none;
+    color: black;
+
+    &:last-child {
+      border-bottom: 1px solid #979797;
+    }
   }
 
   &__tittel {
