--- a/src/pages/forside/sections/6-eksterne/EksterneLenker.less
+++ b/src/pages/forside/sections/6-eksterne/EksterneLenker.less
@@ -1,10 +1,14 @@
-.link-box-content {
-  .link-info {
-    font-weight: bold;
-    margin: 1em 1em 2em 0;
+.el {
+  &__panel {
+    margin: 4rem 0;
+    padding: 2rem;
   }
-
-  .link-footer {
-    margin-top: 4em;
+  &__content {
+    @media @desktop {
+      padding: 0 3rem 1rem 3rem;
+    }
+  }
+  &__info {
+    margin: 1rem 0 2rem 0;
   }
 }
