Redesign av Mer informasjon

--- a/src/pages/forside/sections/7-informasjon/MerInformasjon.less
+++ b/src/pages/forside/sections/7-informasjon/MerInformasjon.less
@@ -1,29 +1,17 @@
-@boxwidth: 85%;
-@iconwidth: 15%;
-
-.alternativ-panel {
-  margin-top: 0.25rem;
-}
-
-.ekspanderbartPanel__hode {
-  min-height: 5rem;
-}
-
-.alternativer {
-  &__tittel-container {
-    display: flex;
-    justify-content: center;
-    margin: 1rem 0;
+.mi {
+  &__panel {
   }
 
-  &__box {
-    padding: 2rem 0 2rem 0;
-    margin-bottom: 4rem;
-    width: 100%;
-    min-height: 200px;
-  }
-}
+  &__rad {
+    padding: 1rem 0;
+    border-top: 1px solid #979797;
 
-.print-panel {
-  cursor: pointer;
+    &:last-child {
+      border-bottom: 1px solid #979797;
+    }
+  }
+
+  &__overskrift {
+    margin-bottom: 2rem;
+  }
 }
