--- a/src/pages/detaljert-arbeidsforhold/DetaljertArbeidsforhold.less
+++ b/src/pages/detaljert-arbeidsforhold/DetaljertArbeidsforhold.less
@@ -9,7 +9,7 @@
   }
   &__innhold {
     background: white;
-    padding: 2rem;
+    padding: 2rem !important;
     margin: 1rem 0;
   }
   &__rad {
