--- a/src/components/kilde/Kilde.less
+++ b/src/components/kilde/Kilde.less
@@ -10,6 +10,9 @@
   }
   &__seksjon {
     width: 50%;
+    display: flex;
+    align-items: center;
+    color: #78706a;
     @media @mobile {
       width: 100%;
     }
