--- a/src/index.less
+++ b/src/index.less
@@ -9,6 +9,8 @@
 @import "~nav-frontend-lesmerpanel-style";
 @import "~nav-frontend-chevron-style";
 @import "~nav-frontend-lenker-style";
+@import "~nav-frontend-lukknapp-style";
+@import "~nav-frontend-modal-style";
 @import "~nav-frontend-veileder-style";
 @import "~nav-frontend-veilederpanel-style";
 @import "~nav-frontend-lenkepanel-style";
@@ -18,6 +20,7 @@
 @import "pages/forside/sections/3-header/Header.less";
 @import "pages/forside/sections/4-personinfo/adresser/Adresser.less";
 @import "pages/forside/sections/4-personinfo/personalia/Personalia.less";
+@import "pages/forside/sections/4-personinfo/kontakt-informasjon/subsections/DKIF.less";
 @import "pages/forside/sections/4-personinfo/ditt-nav-kontor/DittNavKontor.less";
 @import "pages/forside/sections/5-arbeidsforhold/Arbeidsforhold.less";
 @import "pages/forside/sections/6-eksterne/EksterneLenker.less";
