--- a/src/components/kilde/Kilde.less
+++ b/src/components/kilde/Kilde.less
@@ -10,8 +10,17 @@
   }
   &__seksjon {
     width: 50%;
+    display: flex;
+    align-items: center;
+    color: #78706a;
     @media @mobile {
       width: 100%;
+    }
+  }
+  &__lenke {
+    @media @desktop {
+      display: flex;
+      justify-content: flex-end;
     }
   }
 }
