Legg til visning av postadresse

--- a/src/pages/forside/sections/4-personinfo/ditt-nav-kontor/DittNavKontor.less
+++ b/src/pages/forside/sections/4-personinfo/ditt-nav-kontor/DittNavKontor.less
@@ -14,4 +14,16 @@
   &__footer {
     margin-top: 2rem;
   }
+  &__adresser {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  &__publikumsmottak,
+  &__postadresse {
+    width: 50%;
+    @media @mobile {
+      padding-bottom: 1rem;
+      width: 100%;
+    }
+  }
 }
