--- a/src/index.less
+++ b/src/index.less
@@ -14,6 +14,7 @@
 @import "~nav-frontend-veileder-style";
 @import "~nav-frontend-veilederpanel-style";
 @import "~nav-frontend-lenkepanel-style";
+@import "~nav-frontend-hjelpetekst-style";
 
 @import "./App.less";
 @import "pages/forside/sections/2-brodsmulesti/Brodsmulesti.less";
