Legg inn fylt-ikon for hover, flytt less-kode og smårefaktorering

--- a/src/index.less
+++ b/src/index.less
@@ -14,7 +14,6 @@
 @import "~nav-frontend-veileder-style";
 @import "~nav-frontend-veilederpanel-style";
 @import "~nav-frontend-lenkepanel-style";
-@import "~nav-frontend-hjelpetekst-style";
 
 @import "./App.less";
 @import "pages/forside/sections/2-brodsmulesti/Brodsmulesti.less";
@@ -37,3 +36,4 @@
 @import "./components/kilde/Kilde.less";
 @import "./components/error/Error.less";
 @import "./components/meny/Meny.less";
+@import "components/infotekst/Infotekst.less";
