--- a/src/index.less
+++ b/src/index.less
@@ -36,3 +36,4 @@
 @import "./components/kilde/Kilde.less";
 @import "./components/error/Error.less";
 @import "./components/meny/Meny.less";
+@import "components/infotekst/Infotekst.less";
