--- a/src/pages/forside/sections/7-informasjon/MerInformasjon.less
+++ b/src/pages/forside/sections/7-informasjon/MerInformasjon.less
@@ -1,14 +1,34 @@
 .mi {
-  &__panel {
+  &__content {
+    @media @desktop {
+      padding: 0 3rem 1rem 3rem;
+    }
+    display: flex;
+    flex-direction: column;
   }
 
-  &__rad {
-    padding: 1rem 0;
-    border-top: 1px solid #979797;
+  &__line {
+    border: none;
+    border-top: 1px solid;
+    background: none;
+    height: 0;
+    width: 100%;
+    margin: 0;
+  }
 
-    &:last-child {
-      border-bottom: 1px solid #979797;
+  &__button {
+    background: none;
+    border: none;
+    padding: 1rem 0;
+    width: 100%;
+    &:focus {
+      background: @fokusFarge;
+      .mi__lenke {
+        color: white;
+      }
     }
+    display: flex;
+    justify-content: left;
   }
 
   &__overskrift {
