--- a/src/index.less
+++ b/src/index.less
@@ -26,7 +26,8 @@
 @import "pages/forside/sections/6-eksterne/EksterneLenker.less";
 @import "pages/forside/sections/7-informasjon/MerInformasjon.less";
 
-@import "./pages/detaljert-arbeidsforhold/DetaljertArbeidsforhold";
+@import "./pages/detaljert-arbeidsforhold/DetaljertArbeidsforhold.less";
+@import "./pages/dsop/Historikk.less";
 
 @import "./components/box/Box.less";
 @import "./components/linkbox/LinkBox.less";
