Pretty print json

--- a/src/index.less
+++ b/src/index.less
@@ -28,6 +28,7 @@
 
 @import "./pages/detaljert-arbeidsforhold/DetaljertArbeidsforhold.less";
 @import "./pages/dsop/Historikk.less";
+@import "./pages/dsop/Detaljer.less";
 
 @import "./components/box/Box.less";
 @import "./components/linkbox/LinkBox.less";
