Legg til margin på dsop tittel

--- a/src/pages/dsop/Detaljer.less
+++ b/src/pages/dsop/Detaljer.less
@@ -4,6 +4,9 @@
     border: solid 2px #66a4dc;
     padding: 2rem 1rem;
   }
+  &__tittel {
+    margin-bottom: 0.5rem;
+  }
   &__header {
     color: #0067c5;
   }
