--- a/src/pages/forside/sections/2-brodsmulesti/Brodsmulesti.less
+++ b/src/pages/forside/sections/2-brodsmulesti/Brodsmulesti.less
@@ -9,6 +9,7 @@
   font-weight: 400;
   min-height: 45px;
   margin: 0.5rem 0;
+  flex-wrap: wrap;
   text-transform: capitalize;
 
   &__account {
@@ -19,6 +20,10 @@
     @media @mobile {
       display: none;
     }
+  }
+
+  &__lenke {
+    display: flex;
   }
 
   > * {
