--- a/src/index.less
+++ b/src/index.less
@@ -13,6 +13,7 @@
 @import "~nav-frontend-modal-style";
 @import "~nav-frontend-veileder-style";
 @import "~nav-frontend-veilederpanel-style";
+@import "~nav-frontend-alertstriper-style";
 @import "~nav-frontend-lenkepanel-style";
 
 @import "./App.less";
