--- a/src/pages/forside/sections/5-arbeidsforhold/Arbeidsforhold.less
+++ b/src/pages/forside/sections/5-arbeidsforhold/Arbeidsforhold.less
@@ -1,6 +1,13 @@
 .arbeidsforhold {
   padding: 1rem 0 0 0;
   &__disclaimer {
-    padding: 2rem 0 0 0;
+    padding: 1.5rem 0 0 0;
+  }
+  &__arbeidsgiver {
+    color: #78706a;
+    text-transform: none !important;
+  }
+  &__kilde {
+    color: #78706a;
   }
 }
