--- a/src/index.less
+++ b/src/index.less
@@ -28,8 +28,10 @@
 @import "pages/forside/sections/7-informasjon/MerInformasjon.less";
 
 @import "./pages/detaljert-arbeidsforhold/DetaljertArbeidsforhold.less";
+@import "./pages/telefonnummer/Telefonnummer.less";
 @import "./pages/dsop/Historikk.less";
 @import "./pages/dsop/Detaljer.less";
+@import "./pages/404/404.less";
 
 @import "./components/box/Box.less";
 @import "./components/linkbox/LinkBox.less";
