--- a/src/pages/forside/sections/4-personinfo/adresser/Adresser.less
+++ b/src/pages/forside/sections/4-personinfo/adresser/Adresser.less
@@ -7,12 +7,15 @@
     }
   }
   &__tittel {
-    padding: 0 0 0.5rem 0;
+    padding: 1rem 0;
   }
   &__lesmer {
     padding: 0;
   }
   &__linje {
     width: 100%;
+  }
+  &__seksjon {
+    padding: 1rem 0;
   }
 }
