--- a/src/pages/forside/sections/4-personinfo/kontakt-informasjon/subsections/DKIF.less
+++ b/src/pages/forside/sections/4-personinfo/kontakt-informasjon/subsections/DKIF.less
@@ -2,6 +2,7 @@
   &__overskrift-container {
     display: flex;
     align-items: center;
+    margin-top: 2rem;
   }
   &__overskrift-i-icon {
     max-width: 1.5rem;
