--- a/src/pages/forside/sections/4-personinfo/adresser/Adresser.less
+++ b/src/pages/forside/sections/4-personinfo/adresser/Adresser.less
@@ -7,7 +7,7 @@
     }
   }
   &__tittel {
-    padding: 1rem 0;
+    padding: 0 0 1rem 0;
   }
   &__lesmer {
     padding: 0;
@@ -15,7 +15,10 @@
   &__linje {
     width: 100%;
   }
-  &__seksjon {
-    padding: 1rem 0;
+  &__midlertidig-adresse {
+    padding-top: 3rem;
+  }
+  &__divider {
+    padding: 1rem;
   }
 }
