--- a/src/components/kilde/Kilde.less
+++ b/src/components/kilde/Kilde.less
@@ -17,6 +17,7 @@
     color: #78706a;
     @media @mobile {
       width: 100%;
+      padding-bottom: 0.25rem;
     }
   }
   &__lenke-container {
@@ -27,6 +28,7 @@
   }
   &__lenke {
     display: flex;
+    align-items: center;
   }
   &__icon {
     margin-left: 0.5rem;
