Flytt kilde-linje inn i kilde-komponent

--- a/src/components/kilde/Kilde.less
+++ b/src/components/kilde/Kilde.less
@@ -33,4 +33,10 @@
   &__icon {
     margin-left: 0.5rem;
   }
+  &__linje {
+    border: 0.5px solid black;
+    width: 100%;
+    opacity: 0.5;
+    margin: 1.4rem auto 0.75rem auto;
+  }
 }
