--- a/src/App.less
+++ b/src/App.less
@@ -35,7 +35,7 @@ body {
 
 .underseksjon {
   &__header {
-    margin-bottom: 0.5rem;
+    padding: 0.5rem 0;
   }
   &__beskrivelse {
     padding: 0.5rem 0;
