--- a/src/components/linkbox/LinkBox.less
+++ b/src/components/linkbox/LinkBox.less
@@ -22,6 +22,9 @@
 
   &__icon-container {
     padding: 0 1.5rem 0 0;
+    @media @mobile {
+      padding: 0 0.5rem 0 0;
+    }
   }
 
   &__lenke-container {
