--- a/src/pages/forside/sections/6-eksterne/EksterneLenker.less
+++ b/src/pages/forside/sections/6-eksterne/EksterneLenker.less
@@ -7,6 +7,9 @@
     @media @desktop {
       padding: 0 3rem 1rem 3rem;
     }
+    @media @mobile {
+      padding: 0 0 1.5rem 0;
+    }
   }
   &__info {
     margin: 1rem 0 2rem 0;
