--- a/src/App.less
+++ b/src/App.less
@@ -61,3 +61,8 @@ body {
   display: flex;
   justify-content: center;
 }
+
+.nav-veilederpanel--kompakt.nav-veilederpanel--plakat {
+  padding: 1.5rem !important;
+  padding-top: 4.25rem !important;
+}
