--- a/src/pages/forside/sections/6-eksterne/EksterneLenker.less
+++ b/src/pages/forside/sections/6-eksterne/EksterneLenker.less
@@ -1,7 +1,7 @@
 .el {
   &__panel {
     margin: 4rem 0;
-    padding: 2rem !important;
+    padding: 2rem 1.5rem !important;
   }
   &__content {
     @media @desktop {
