Refaktor / redesign / klargjøring for PDL (#106)
* Refaktorer pagecontainer

* Legg til 404, og side for å endre telefonnummer

* Fiks tilbakeknapp

* Fiks riktige dividers

* Fiks lenker

* Juster avstander

* Flytt kilde-linje inn i kilde-komponent

* Fjern ubrukt import

* Bugfix adresser

* Korreksjon leggtiladresse

* Oppdatert design

* Fiks ikoner

* Legg til featuretoggle for pdf-endring

* Navneendringer

--- a/src/App.less
+++ b/src/App.less
@@ -33,6 +33,18 @@ body {
   }
 }
 
+.underseksjon {
+  &__header {
+    padding: 0.5rem 0;
+  }
+  &__beskrivelse {
+    padding: 0.5rem 0;
+  }
+  &__divider {
+    padding-top: 0.5rem;
+  }
+}
+
 .pagewrapper {
   width: 100%;
 }
@@ -40,7 +52,7 @@ body {
 .pagecontent {
   width: 100%;
   max-width: 800px;
-  padding: 0 0.2em;
+  padding: 0 1em;
 }
 
 .spinner-wrapper {
@@ -48,4 +60,9 @@ body {
   margin: 4em 0;
   display: flex;
   justify-content: center;
+}
+
+.nav-veilederpanel--kompakt.nav-veilederpanel--plakat {
+  padding: 1.5rem !important;
+  padding-top: 4.25rem !important;
 }
