--- a/src/components/box/Box.less
+++ b/src/components/box/Box.less
@@ -17,6 +17,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
   }
 
   &__ikon {
@@ -59,7 +60,7 @@
     border: 0.5px solid black;
     width: 100%;
     opacity: 0.5;
-    margin: 1.4rem auto;
+    margin: 1rem auto;
   }
 
   &__content {
@@ -69,12 +70,13 @@
       flex-wrap: wrap;
       list-style-type: none;
       padding-left: 0;
+      margin: 0;
     }
 
     li {
       flex-grow: 1;
       box-sizing: border-box;
-      padding: 0rem 2rem 1rem 0rem;
+      padding: 0.5rem 2rem 0.5rem 0rem;
 
       .title {
         display: block;
