--- a/src/pages/forside/sections/6-eksterne/EksterneLenker.less
+++ b/src/pages/forside/sections/6-eksterne/EksterneLenker.less
@@ -1,11 +1,14 @@
 .el {
   &__panel {
     margin: 4rem 0;
-    padding: 2rem !important;
+    padding: 2rem 1.5rem !important;
   }
   &__content {
     @media @desktop {
       padding: 0 3rem 1rem 3rem;
+    }
+    @media @mobile {
+      padding: 0 0 1.5rem 0;
     }
   }
   &__info {
