--- a/src/pages/forside/sections/5-arbeidsforhold/Arbeidsforhold.less
+++ b/src/pages/forside/sections/5-arbeidsforhold/Arbeidsforhold.less
@@ -1,7 +1,7 @@
 .arbeidsforhold {
   padding: 1rem 0 0 0;
   &__disclaimer {
-    padding: 1rem 0 0 0;
+    padding: 2rem 0 1rem 0;
   }
   &__arbeidsgiver {
     color: #78706a;
