Legg til endringsmuligheter for telefon

--- a/src/App.less
+++ b/src/App.less
@@ -62,6 +62,13 @@ body {
   justify-content: center;
 }
 
+.knapp {
+  &__lagre {
+    display: flex;
+    justify-content: center;
+  }
+}
+
 .nav-veilederpanel--kompakt.nav-veilederpanel--plakat {
   padding: 1.5rem !important;
   padding-top: 4.25rem !important;
