--- a/src/index.less
+++ b/src/index.less
@@ -14,6 +14,7 @@
 @import "~nav-frontend-veileder-style";
 @import "~nav-frontend-veilederpanel-style";
 @import "~nav-frontend-alertstriper-style";
+@import "~nav-frontend-knapper-style";
 @import "~nav-frontend-lenkepanel-style";
 
 @import "./App.less";
