Benytt nav-frontend-skjema i stedet for egen komponent

--- a/src/index.less
+++ b/src/index.less
@@ -36,6 +36,7 @@
 
 @import "./components/box/Box.less";
 @import "./components/linkbox/LinkBox.less";
+@import "./components/telefonnummer/Telefonnummer.less";
 @import "./components/apningstid/Apningstid.less";
 @import "./components/icon/Icon.less";
 @import "./components/melding/Melding.less";
