--- a/src/index.less
+++ b/src/index.less
@@ -10,8 +10,10 @@
 @import "~nav-frontend-chevron-style";
 @import "~nav-frontend-lenker-style";
 @import "~nav-frontend-lukknapp-style";
+@import "~nav-frontend-skjema-style";
 @import "~nav-frontend-modal-style";
 @import "~nav-frontend-veileder-style";
+@import "~nav-frontend-hjelpetekst-style";
 @import "~nav-frontend-veilederpanel-style";
 @import "~nav-frontend-alertstriper-style";
 @import "~nav-frontend-lenkepanel-style";
