Oppdater knapper, legg til endre-ikon

--- a/src/components/telefonnummer/Telefonnummer.less
+++ b/src/components/telefonnummer/Telefonnummer.less
@@ -13,6 +13,9 @@
   &__submit {
     margin: 2rem 0 1rem 0.5rem;
   }
+  &__knapp-ikon {
+    margin-left: 0.5rem;
+  }
   &__endrestil {
     margin: 1rem 0;
   }
