Endre stylint på endre-knapp

--- a/src/components/telefonnummer/Telefonnummer.less
+++ b/src/components/telefonnummer/Telefonnummer.less
@@ -13,8 +13,8 @@
   &__submit {
     margin: 2rem 0 1rem 0.5rem;
   }
-  &__knapp-ikon {
-    margin-left: 0.5rem;
+  &__knapp {
+    padding: 0 0.5rem !important;
   }
   &__endrestil {
     margin: 1rem 0;
