Legg til divider

--- a/src/components/telefonnummer/Telefonnummer.less
+++ b/src/components/telefonnummer/Telefonnummer.less
@@ -1,4 +1,10 @@
 .tlfnummer {
+  &__rad {
+    border-bottom: 1px solid #ececec;
+  }
+  &__rad:last-child {
+    border: 0;
+  }
   &__container {
     display: flex;
     justify-content: space-between;
