Fjern ubrukt divider

--- a/src/components/telefonnummer/Telefonnummer.less
+++ b/src/components/telefonnummer/Telefonnummer.less
@@ -1,6 +1,6 @@
 .tlfnummer {
   &__rad {
-    border-bottom: 1px solid #ececec;
+    border-bottom: 1px solid #e1e1e1;
   }
   &__rad:last-child {
     border: 0;
