--- a/src/components/telefonnummer/Telefonnummer.less
+++ b/src/components/telefonnummer/Telefonnummer.less
@@ -1,4 +1,8 @@
 .tlfnummer {
+  &__rad,
+  &__rad-leggtil {
+    padding: 0.75rem 0;
+  }
   &__rad {
     border-bottom: 1px solid #e1e1e1;
   }
@@ -10,12 +14,15 @@
   }
   &__container {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
-    padding: 0.75rem 0;
   }
   &__input-container {
     display: flex;
     flex-wrap: wrap;
+  }
+  &__alert {
+    margin-top: 0.5rem;
   }
   &__input {
     @media @tablet, @desktop {
