Korriger posisjon til divideren til legg-til

--- a/src/components/telefonnummer/Telefonnummer.less
+++ b/src/components/telefonnummer/Telefonnummer.less
@@ -6,8 +6,12 @@
   &__rad {
     border-bottom: 1px solid #e1e1e1;
   }
-  &__rad-leggtil {
+  &__divider {
+    height: 1px;
     border-top: 1px solid #e1e1e1;
+    &-hidden {
+      visibility: hidden;
+    }
   }
   &__rad:last-child {
     border: 0;
