--- a/src/index.less
+++ b/src/index.less
@@ -27,6 +27,7 @@
 @import "pages/forside/sections/4-personinfo/1-personalia/Personalia.less";
 @import "pages/forside/sections/4-personinfo/2-kontaktinfo/subsections/kontakt-og-reservasjonsregisteret/DKIF.less";
 @import "pages/forside/sections/4-personinfo/4-ditt-nav-kontor/DittNavKontor.less";
+@import "pages/forside/sections/4-personinfo/5-utbetalinger/Utbetalinger.less";
 @import "pages/forside/sections/5-arbeidsforhold/Arbeidsforhold.less";
 @import "pages/forside/sections/6-eksterne/EksterneLenker.less";
 @import "pages/forside/sections/7-informasjon/MerInformasjon.less";
