Legg til form for kontonummer

--- a/src/pages/forside/sections/4-personinfo/5-utbetalinger/Utbetalinger.less
+++ b/src/pages/forside/sections/4-personinfo/5-utbetalinger/Utbetalinger.less
@@ -1,4 +1,4 @@
-.utbetaling {
+.utbetalinger {
   &__type {
     margin-bottom: 1rem;
 
@@ -11,5 +11,9 @@
         }
       }
     }
+  }
+  &__knapp-container {
+    display: flex;
+    justify-content: center;
   }
 }
