--- a/src/index.less
+++ b/src/index.less
@@ -17,31 +17,34 @@
 @import "~nav-frontend-hjelpetekst-style";
 @import "~nav-frontend-veilederpanel-style";
 @import "~nav-frontend-alertstriper-style";
+@import "~nav-frontend-knapper-style";
 @import "~nav-frontend-lenkepanel-style";
 
-@import "./App.less";
+@import "App.less";
 @import "pages/forside/sections/2-brodsmulesti/Brodsmulesti.less";
 @import "pages/forside/sections/3-header/Header.less";
 @import "pages/forside/sections/4-personinfo/3-adresser/Adresser.less";
 @import "pages/forside/sections/4-personinfo/1-personalia/Personalia.less";
-@import "pages/forside/sections/4-personinfo/2-kontaktinfo/subsections/kontakt-og-reservasjonsregisteret/KontaktInfo.less";
+@import "pages/forside/sections/4-personinfo/2-kontaktinfo/subsections/kontakt-og-reservasjonsregisteret/DKIF.less";
 @import "pages/forside/sections/4-personinfo/4-ditt-nav-kontor/DittNavKontor.less";
 @import "pages/forside/sections/5-arbeidsforhold/Arbeidsforhold.less";
 @import "pages/forside/sections/6-eksterne/EksterneLenker.less";
 @import "pages/forside/sections/7-informasjon/MerInformasjon.less";
 
-@import "./pages/detaljert-arbeidsforhold/DetaljertArbeidsforhold.less";
+@import "pages/detaljert-arbeidsforhold/DetaljertArbeidsforhold.less";
 @import "pages/endre/kontaktinfo/KontaktInfo.less";
-@import "./pages/dsop/Historikk.less";
-@import "./pages/dsop/Detaljer.less";
-@import "./pages/404/404.less";
+@import "pages/dsop/Historikk.less";
+@import "pages/dsop/Detaljer.less";
+@import "pages/404/404.less";
 
-@import "./components/box/Box.less";
-@import "./components/linkbox/LinkBox.less";
-@import "./components/apningstid/Apningstid.less";
-@import "./components/icon/Icon.less";
-@import "./components/melding/Melding.less";
-@import "./components/kilde/Kilde.less";
-@import "./components/error/Error.less";
-@import "./components/meny/Meny.less";
+@import "components/box/Box.less";
+@import "components/linkbox/LinkBox.less";
+@import "components/retningsnumre/Retningsnumre.less";
+@import "components/telefonnummer/Telefonnummer.less";
+@import "components/apningstid/Apningstid.less";
+@import "components/icon/Icon.less";
+@import "components/melding/Melding.less";
+@import "components/kilde/Kilde.less";
+@import "components/error/Error.less";
+@import "components/meny/Meny.less";
 @import "components/infotekst/Infotekst.less";
