--- a/src/components/retningsnumre/Retningsnumre.less
+++ b/src/components/retningsnumre/Retningsnumre.less
@@ -4,9 +4,9 @@
   }
 
   &__control {
-    border: 1px solid @navGra60;
-    min-height: 40px;
-    width: 140px;
+    border: 1px solid @navGra60 !important;
+    min-height: 40px !important;
+    width: 140px !important;
 
     &-feil {
       .KodeverkSelect {
