--- a/src/App.less
+++ b/src/App.less
@@ -69,6 +69,10 @@ body {
   }
 }
 
+.btn-auth {
+  min-height: 25px !important;
+}
+
 .nav-veilederpanel--kompakt.nav-veilederpanel--plakat {
   padding: 1.5rem !important;
   padding-top: 4.25rem !important;
