Minimum bredde på landskode

--- a/src/components/retningsnumre/Retningsnumre.less
+++ b/src/components/retningsnumre/Retningsnumre.less
@@ -38,6 +38,11 @@
       margin-right: 5px;
     }
   }
+  &__menu {
+    @media @desktop {
+      min-width: 315px;
+    }
+  }
   &__option:first-child {
     border-bottom: 1px solid #979797;
   }
