Refaktorer plassering av knapp og input-felt

--- a/src/pages/forside/sections/4-personinfo/5-utbetalinger/Utbetalinger.less
+++ b/src/pages/forside/sections/4-personinfo/5-utbetalinger/Utbetalinger.less
@@ -1,4 +1,7 @@
 .utbetalinger {
+  &__rad {
+    display: flex;
+  }
   &__type {
     margin-bottom: 1rem;
 
@@ -12,8 +15,7 @@
       }
     }
   }
-  &__knapp-container {
-    display: flex;
-    justify-content: center;
+  &__knapp {
+    margin: 2rem 0 0 1rem;
   }
 }
