--- a/src/pages/forside/sections/4-personinfo/5-utbetalinger/Utbetalinger.less
+++ b/src/pages/forside/sections/4-personinfo/5-utbetalinger/Utbetalinger.less
@@ -18,4 +18,30 @@
   &__knapp {
     margin: 2rem 0 0 1rem;
   }
+  &__input-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  &__alert {
+    margin-bottom: 1rem;
+  }
+  &__input-box {
+    @media @desktop {
+      min-width: 50%;
+      &:nth-child(odd) {
+        padding-right: 0.25rem;
+      }
+      &:nth-child(even) {
+        padding-left: 0.25rem;
+      }
+    }
+  }
+  &__adressefelter {
+    width: 100%;
+  }
+  &__sentrert-knapp {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
