--- a/src/index.less
+++ b/src/index.less
@@ -43,6 +43,7 @@
 @import "components/retningsnumre/Retningsnumre.less";
 @import "components/telefonnummer/Telefonnummer.less";
 @import "components/apningstid/Apningstid.less";
+@import "components/kontonummer/EndreKontoFelt.less";
 @import "components/icon/Icon.less";
 @import "components/melding/Melding.less";
 @import "components/kilde/Kilde.less";
