PDL - Endring av kontonummer (#115)
* Legg til default for norge

* Minimum bredde på landskode

* Fiks UU

* Juster avstand

* Fiks formattering av kontonummer og telefonnummer

* Fjern formattering på input

* Fjern formattering av input-field på kontonummer

* Fiks bredde-broblemer

* Refaktorer plassering av knapp og input-felt

* Legg til begrensinger på bredde på input-container

* Legg inn støtte for å endre kontonr

* Retningsnummer->Landskode

* Fiks mock data av retningsnumre

* Sett opprettEllerEndre false etter suksess

* Legg til felter for utenlandsk kontonummer

* Gjern unødvendig felt

* Legg inn tekst for IBAN

* Mellomrom mellom BIC / SWIFT-kode

* Legg til sjekker på IBAN/BIC

* Oppdater feilmeldinger

* Legg inn default valg av norsk eller utenlandsk kontonummer

* Bugfix init-values

* Legg til hjelpetekster

* Mindre designjustering

* Gjør klart for henting av valuta og land-kodeverk, lag egen select-komponent

* Restrukturer komponenter

* Legg til kodeverk-select for valuta og land

* Kontonummer->iban

* Bugfix søkefelt

* Default value på select

* Mindre refaktor

* Bugfix feature toggles

* Regex fix

--- a/src/components/select/NAVSelect.less
+++ b/src/components/select/NAVSelect.less
@@ -1,4 +1,8 @@
 .KodeverkSelect {
+  &__header {
+    display: flex;
+  }
+
   &__dropdown-indicator {
     padding: 0 0.5rem;
   }
@@ -6,7 +10,6 @@
   &__control {
     border: 1px solid @navGra60 !important;
     min-height: 40px !important;
-    width: 140px !important;
 
     &-feil {
       .KodeverkSelect {
@@ -37,5 +40,16 @@
     &__spinner {
       margin-right: 5px;
     }
+  }
+  &__menu {
+    @media @desktop {
+      min-width: 315px;
+    }
+  }
+}
+
+.KodeverkSelect__borderUnderFirst {
+  .KodeverkSelect__option:first-child {
+    border-bottom: 1px solid #979797;
   }
 }
