--- a/src/components/telefonnummer/Telefonnummer.less
+++ b/src/components/telefonnummer/Telefonnummer.less
@@ -14,12 +14,13 @@
     }
   }
   &__rad:last-child {
-    border: 0;
+    border-bottom: 0;
   }
   &__container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    align-items: flex-start;
   }
   &__input-container {
     display: flex;
@@ -44,8 +45,21 @@
       margin: 1rem 0;
     }
   }
+  &__knapper {
+    display: flex;
+    padding-top: 0.15rem;
+  }
   &__knapp {
-    padding: 0 0.5rem !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0.275rem !important;
+    &:first-child {
+      margin-right: 0.25rem;
+    }
+    &-tekst {
+      padding: 0 0.25rem;
+    }
   }
   &__chevron {
     margin: 0.5rem 0;
