--- a/src/components/linkbox/LinkBox.less
+++ b/src/components/linkbox/LinkBox.less
@@ -22,7 +22,7 @@
 
   &__icon-container {
     padding: 0 1.5rem 0 0;
-    @media @mobile {
+    @media @maxMobile {
       padding: 0 0.5rem 0 0;
     }
   }
@@ -44,11 +44,11 @@
     justify-content: flex-end;
     align-items: flex-start;
 
-    @media @tablet {
+    @media @maxTablet {
       width: 50%;
     }
 
-    @media @mobile {
+    @media @maxMobile {
       width: 100%;
     }
   }
