--- a/src/pages/forside/sections/4-personinfo/2-kontaktinfo/subsections/telefonnummer/Telefonnummer.less
+++ b/src/pages/forside/sections/4-personinfo/2-kontaktinfo/subsections/telefonnummer/Telefonnummer.less
@@ -30,18 +30,18 @@
     margin-top: 0.5rem;
   }
   &__input {
-    @media @tablet, @desktop {
+    @media @maxTablet, @minDesktop {
       margin-right: 0.5rem;
     }
   }
   &__submit {
-    @media @desktop {
+    @media @minDesktop {
       margin: 2rem 0 1rem 0;
     }
-    @media @tablet {
+    @media @maxTablet {
       margin: 2rem 0 1rem 0;
     }
-    @media @mobile {
+    @media @maxMobile {
       margin: 1rem 0;
     }
   }
