--- a/src/pages/forside/sections/4-personinfo/4-ditt-nav-kontor/DittNavKontor.less
+++ b/src/pages/forside/sections/4-personinfo/4-ditt-nav-kontor/DittNavKontor.less
@@ -21,7 +21,7 @@
   &__publikumsmottak,
   &__postadresse {
     width: 50%;
-    @media @mobile {
+    @media @maxMobile {
       padding-bottom: 1rem;
       width: 100%;
     }
