--- a/src/components/box/Box.less
+++ b/src/components/box/Box.less
@@ -8,7 +8,7 @@
   }
 
   &__container {
-    @media @desktop {
+    @media @minDesktop {
       padding: 0 3rem 1rem 3rem;
     }
   }
@@ -29,7 +29,7 @@
   }
 
   &__icon-container {
-    @media @desktop {
+    @media @minDesktop {
       padding: 0 1.5rem 0 0;
     }
   }
@@ -37,7 +37,7 @@
   &__content-container {
     width: 100%;
 
-    @media @tablet {
+    @media @maxTablet {
       padding: 1.75rem 0;
     }
   }
@@ -85,7 +85,7 @@
           overflow: hidden;
         }
 
-        @media @mobile {
+        @media @maxMobile {
           width: 100%;
         }
       }
