--- a/src/pages/dsop/Historikk.less
+++ b/src/pages/dsop/Historikk.less
@@ -7,10 +7,10 @@
     border-bottom: 1px solid #979797;
     display: flex;
     padding: 0.25rem 0;
-    @media @desktop, @tablet {
+    @media @minDesktop, @maxTablet {
       flex-direction: row;
     }
-    @media @mobile {
+    @media @maxMobile {
       flex-direction: column;
     }
   }
