--- a/src/pages/forside/sections/4-personinfo/4-ditt-nav-kontor/apningstid/Apningstid.less
+++ b/src/pages/forside/sections/4-personinfo/4-ditt-nav-kontor/apningstid/Apningstid.less
@@ -8,11 +8,11 @@
     padding: 0.5rem 0;
     border-bottom: 1px solid #3e3832;
 
-    @media @desktop {
+    @media @minDesktop {
       align-items: center;
     }
 
-    @media @mobile {
+    @media @maxMobile {
       flex-direction: column;
     }
 
