--- a/src/pages/forside/sections/6-eksterne/EksterneLenker.less
+++ b/src/pages/forside/sections/6-eksterne/EksterneLenker.less
@@ -4,10 +4,10 @@
     padding: 2rem 1.5rem !important;
   }
   &__content {
-    @media @desktop {
+    @media @minDesktop {
       padding: 0 3rem 1rem 3rem;
     }
-    @media @mobile {
+    @media @maxMobile {
       padding: 0 0 1.5rem 0;
     }
   }
