PDL - Implementer norsk gateadresse

--- a/src/pages/forside/sections/4-personinfo/5-utbetalinger/Utbetalinger.less
+++ b/src/pages/forside/sections/4-personinfo/5-utbetalinger/Utbetalinger.less
@@ -6,7 +6,7 @@
     margin-bottom: 1rem;
 
     .inputPanelGruppe__inner {
-      @media @minTablet {
+      @media @minMobile {
         display: flex;
         > * {
           width: 50%;
@@ -28,7 +28,7 @@
     margin-bottom: 2rem;
   }
   &__input-box {
-    @media @minTablet {
+    @media @minMobile {
       min-width: 50%;
       &:nth-child(odd) {
         padding-right: 0.25rem;
@@ -37,7 +37,7 @@
         padding-left: 0.25rem;
       }
     }
-    @media @maxTablet {
+    @media @maxMobile {
       min-width: 100%;
     }
   }
