--- a/src/components/felter/day-picker/DayPicker.less
+++ b/src/components/felter/day-picker/DayPicker.less
@@ -1,10 +1,8 @@
 .DayPickerInput {
-  &-Overlay {
-    @media @minDesktop {
-      width: 520px;
-    }
-  }
   @media @maxMobile {
     width: 100%;
+  }
+  &-Overlay {
+    top: 0.5rem;
   }
 }
