Erstatt select med tekst-oppslag på postnummer

--- a/src/index.less
+++ b/src/index.less
@@ -48,6 +48,7 @@
 @import "components/linkbox/LinkBox.less";
 @import "components/felter/kodeverk/Kodeverk.less";
 @import "components/felter/input-med-hjelpetekst/InputMedHjelpetekst.less";
+@import "components/felter/input-postnummer/InputPostnummer.less";
 @import "components/felter/select/NAVSelect.less";
 @import "components/felter/day-picker/DayPicker.less";
 @import "components/icon/Icon.less";
