--- a/src/pages/forside/sections/4-personinfo/3-adresser/Adresser.less
+++ b/src/pages/forside/sections/4-personinfo/3-adresser/Adresser.less
@@ -46,7 +46,7 @@
     padding-right: 0.5rem;
   }
   &__kolonne:first-child {
-    @media @maxMobile {
+    @media @minMobile {
       padding-right: 0.25rem;
     }
   }
