Fiks validering iht møte

--- a/src/pages/forside/sections/4-personinfo/5-utbetalinger/Utbetalinger.less
+++ b/src/pages/forside/sections/4-personinfo/5-utbetalinger/Utbetalinger.less
@@ -50,4 +50,17 @@
     justify-content: center;
     align-items: center;
   }
+  &__bankkode {
+    &-rad {
+      display: flex;
+    }
+    &-kolonne:first-child {
+      max-width: 4rem;
+      margin-right: 0.15rem;
+    }
+    &-kolonne:last-child {
+      width: 100%;
+      margin-top: 1.9rem;
+    }
+  }
 }
