Redesign bokser og kilde

--- a/src/App.less
+++ b/src/App.less
@@ -41,7 +41,7 @@ body {
     padding: 0.5rem 0;
   }
   &__divider {
-    padding-top: 0.5rem;
+    padding-top: 1rem;
   }
 }
 
@@ -86,4 +86,8 @@ body {
 .nav-veilederpanel--kompakt.nav-veilederpanel--plakat {
   padding: 1.5rem !important;
   padding-top: 4.25rem !important;
+}
+
+.lesMerPanel__togglelink {
+  flex-direction: row-reverse;
 }
