--- a/src/components/infotekst/Infotekst.less
+++ b/src/components/infotekst/Infotekst.less
@@ -1,5 +1,6 @@
 .infotekst {
   &__title-i-button {
+    padding: 0 0 0 0.5rem;
     appearance: none;
     -webkit-appearance: none;
     -moz-appearance: none;
