--- a/src/pages/forside/sections/4-personinfo/2-kontaktinfo/subsections/telefonnummer/Telefonnummer.less
+++ b/src/pages/forside/sections/4-personinfo/2-kontaktinfo/subsections/telefonnummer/Telefonnummer.less
@@ -4,7 +4,7 @@
     padding: 0.75rem 0;
   }
   &__rad {
-    border-bottom: 1px solid #e1e1e1;
+    border-bottom: 1px solid #979797;
   }
   &__divider {
     height: 1px;
@@ -12,11 +12,6 @@
     &-hidden {
       visibility: hidden;
     }
-  }
-  &__verdi {
-  }
-  &__rad:last-child {
-    border-bottom: 0;
   }
   &__container {
     display: flex;
