Endre knapper for innsending av kontonummer

--- a/src/App.less
+++ b/src/App.less
@@ -89,5 +89,11 @@ body {
 }
 
 .lesMerPanel__togglelink {
-  flex-direction: row-reverse;
+  flex-direction: row-reverse !important;
+}
+
+.lesMerPanel__toggleChevron,
+.lesMerPanel__togglelink--erApen {
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
 }
