--- a/src/pages/forside/sections/4-personinfo/4-utbetalinger/Utbetalinger.less
+++ b/src/pages/forside/sections/4-personinfo/4-utbetalinger/Utbetalinger.less
@@ -20,10 +20,12 @@
       }
     }
   }
-  &__knapp {
-    @media @minMobile {
-      margin: 2rem 0 0 1rem;
-    }
+  &__knapper {
+    display: flex;
+    margin: 1rem 0;
+  }
+  &__knapp:last-child {
+    margin-left: 0.5rem;
   }
   &__input-container {
     display: flex;
@@ -49,11 +51,6 @@
 
   &__adressefelter {
     width: 100%;
-  }
-  &__sentrert-knapp {
-    display: flex;
-    justify-content: center;
-    align-items: center;
   }
   &__bankkode {
     &-rad {
