Bugfix loading-knapper

--- a/src/pages/forside/sections/4-personinfo/4-utbetalinger/Utbetalinger.less
+++ b/src/pages/forside/sections/4-personinfo/4-utbetalinger/Utbetalinger.less
@@ -22,7 +22,7 @@
   }
   &__knapper {
     display: flex;
-    margin: 1rem 0;
+    padding: 0.5rem 0;
   }
   &__knapp:last-child {
     margin-left: 0.5rem;
